--- a/Project/vite-project/package.json
+++ b/Project/vite-project/package.json
@@ -10,13 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.2",
+    "@react-oauth/google": "^0.12.1",
     "axios": "^1.6.8",
     "framer-motion": "3.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3"
-    
-
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
